added description to data

--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -14,6 +14,7 @@
     <h2>Skill #<%= skill._id %></h2>
     <h3><%= skill.text %></h3>
     <p>Rank: <%= skill.rank%></p>
+    <p>Description: <%= skill.d %></p>
   <% } %>
 	<a href="/skills">Go back</a>
 </body>
