added method npm, and html for X each skill

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -8,12 +8,20 @@
 </head>
 <body>
     <h1>Skills as of <%= time %></h1>
+
     <% if(error) { %>
       <h2><%= error %></h2>
     <% } %>
     <ul>
       <% skills.forEach(function(skill) { %>
         <li>
+          <form 
+            action="/skills/<%= skill._id %>?_method=DELETE"
+            class="delete-form"
+            method="POST"
+          >
+            <button type="submit">X</button>
+          </form>
           <a href="/skills/<%= skill._id %>"><%=skill.text %></a>
             - 
           <%= skill.rank %>
